--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/extraerImagenesEtiquetas
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.4.0.jar=C:\\Users\\BECARIOTI\\Documents\\NetBeansProjects\\GeneracionEtiquetasCinlat_12.0\\lib\\itextpdf-5.4.0.jar
+file.reference.pdfbox-2.0.25.jar=C:\\Users\\BECARIOTI\\Documents\\NetBeansProjects\\GeneracionEtiquetasCinlat_12.0\\lib\\pdfbox-2.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.pdfbox-2.0.25.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,8 +51,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=11
-javac.target=11
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
